--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -2,7 +2,7 @@ body {
   font-family: "Muli", sans-serif;
   font-weight: 300;
   background-color: #e2e8f0;
-  padding: 20px;
+  padding: 0 10px 10px 10px;
 }
 
 label {
